fix trailing comma

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Benjamin Wöster",
-            "email": "benjamin.woester@gmail.com",
+            "email": "benjamin.woester@gmail.com"
         }
     ],
     "support": {
